Resolve conflicts and change code that doesn't fit

--- a/src/style.css
+++ b/src/style.css
@@ -122,12 +122,6 @@ nav .toggle_btn {
   margin-right: 0px;
 }
 
-/* servie */
-/* langganan */
-/* footer */
-
-/* Responsive Design */
-
 @media (max-width: 1024px) {
   nav .nav-links a {
     font-size: 1.1em;
@@ -157,17 +151,6 @@ nav .toggle_btn {
     width: unset;
   }
 }
-
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700&family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
-
-*,
-body {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font-family: "Nunito", sans-serif;
-}
-
 .collapse ul li a {
   font-size: 18px;
   color: #234cad;
@@ -1460,7 +1443,7 @@ body {
   color: #234cad;
 }
 /* end card 8 */
-/*---------------- END TEXT CENTER------------------------*/
+/*---- END TEXT CENTER----------*/
 .about-text {
   width: 400px;
   margin-top: 60px;
@@ -1480,7 +1463,7 @@ body {
 .btn:hover {
   background-color: #f2f6ff;
 }
-/*---------------------------responsive about-----------------------*/
+/*---------------responsive about-----------*/
 @media screen and (max-width: 1024px) {
   .about-text {
     text-align: center;
@@ -1506,7 +1489,7 @@ body {
     margin-top: -20px;
   }
 }
-/*---------------------------about content-----------------------*/
+/*-----------about content-----------*/
 .about-content {
   margin-top: 65px;
 }
